tests/samples/negative/generics/generic_struct_type_arg_count_mismatch.ax
module generic_struct_type_arg_count_mismatch;

struct Pair<T, U> {
    left: T;
    right: U;
}

fn main() -> i32 {
    let value: Pair<i32> = Pair {
        left: 1,
        right: true,
    };
    return 0;
}
